force-app/main/default/objects/Inspection_Request__c/Inspection_Request__c.object-meta.xml
<CustomObject>
    <description>Inspection requests covering TPI, FAT, SAT, and internal inspections against an ITP on EPC projects.</description>
    <label>Inspection Request</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>IR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>