force-app/main/default/objects/Inspection_Request__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area / Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>