force-app/main/default/objects/Inspection_Request__c/fields/Inspected_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Date__c</fullName>
    <label>Inspected Date</label>
    <type>Date</type>
</CustomField>