force-app/main/default/objects/Inspection_Request__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests_Inspector</relationshipName>
    <type>Lookup</type>
</CustomField>