force-app/main/default/objects/Inspection_Request__c/fields/ITP__c.field-meta.xml
<CustomField>
    <fullName>ITP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Test Plan</label>
    <referenceTo>Inspection_Test_Plan__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>