force-app/main/default/objects/Inspection_Request__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot / Batch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>