force-app/main/default/objects/Inspection_Request__c/fields/Result_Notes__c.field-meta.xml
<CustomField>
    <fullName>Result_Notes__c</fullName>
    <label>Result Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>