force-app/main/default/objects/Inspection_Request__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>