force-app/main/default/objects/Inspection_Request__c/fields/Work_Package__c.field-meta.xml
<CustomField>
    <fullName>Work_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Package</label>
    <referenceTo>Work_Package__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>